--- a/po/de.po
+++ b/po/de.po
@@ -19,11 +19,11 @@ msgstr ""
 
 #: src/clean.rs:31
 msgid "Do you want to remove ALL AUR packages from cache?"
-msgstr "Möchten Sie ALLE AUR-Pakete aus dem Cache entfernen?"
+msgstr "ALLE AUR-Pakete aus dem Cache entfernen?"
 
 #: src/clean.rs:33
 msgid "Do you want to remove all other AUR packages from cache?"
-msgstr "Möchten Sie alle anderen AUR-Pakete aus dem Cache entfernen?"
+msgstr "Alle anderen AUR-Pakete aus dem Cache entfernen?"
 
 #: src/clean.rs:40
 msgid "Clone Directory: {}"
@@ -39,19 +39,19 @@ msgstr ""
 
 #: src/clean.rs:48
 msgid "Do you want to remove all saved diffs?"
-msgstr "Möchten Sie alle gespeicherten Diffs entfernen?"
+msgstr "Alle gespeicherten Diffs entfernen?"
 
 #: src/clean.rs:64
 msgid "can't open diff dir: {}"
-msgstr "Diff-Verzeichnis kann nicht geöffnet werden: {}"
+msgstr "kann Diff-Verzeichnis nicht öffnen: {}"
 
 #: src/clean.rs:75 src/clean.rs:133
 msgid "could not remove '{}'"
-msgstr "‚{}‘ konnte nicht entfernt werden"
+msgstr "kann ‚{}‘ nicht entfernen"
 
 #: src/clean.rs:93
 msgid "can't open clone dir: {}"
-msgstr "Clone-Verzeichnis kann nicht geöffnet werden: {}"
+msgstr "kann Clone-Verzeichnis nicht öffnen: {}"
 
 #: src/command_line.rs:127
 msgid "option {} expects a value"
@@ -71,11 +71,11 @@ msgstr "unbekannte Option -{}"
 
 #: src/completion.rs:27
 msgid "failed to open cache file '{}'"
-msgstr "Cache-Datei ‚{}‘ konnte nicht geöffnet werden"
+msgstr "kann Cache-Datei ‚{}‘ nicht öffnen"
 
 #: src/completion.rs:65
 msgid "could not update aur cache"
-msgstr "AUR-Cache konnte nicht aktualisiert werden"
+msgstr "kann AUR-Cache nicht aktualisieren"
 
 #: src/config.rs:174
 msgid "invalid value '{val}' for key '{key}', expected: {exp}"
@@ -83,11 +83,11 @@ msgstr "ungültiger Wert ‚{val}' für Schlüssel ‚{key}', erwartet: {exp}"
 
 #: src/config.rs:474
 msgid "failed to find cache directory"
-msgstr "Cache-Verzeichnis konnte nicht gefunden werden"
+msgstr "kann Cache-Verzeichnis nicht finden"
 
 #: src/config.rs:477
 msgid "failed to find config directory"
-msgstr "Konfigurations-Verzeichnis konnte nicht gefunden werden"
+msgstr "kann Konfigurations-Verzeichnis nicht finden"
 
 #: src/config.rs:501
 msgid "config file '{}' does not exist"
@@ -95,7 +95,7 @@ msgstr "Konfigurations-Datei ‚{}‘ existiert nicht"
 
 #: src/config.rs:550
 msgid "only one operation may be used at a time"
-msgstr "es kann nur eine Operation gleichzeitig ausgeführt werden"
+msgstr "mehrere Operationen sind nicht unterstützt"
 
 #: src/config.rs:638
 msgid "can not find local repo '{}' in pacman.conf"
@@ -144,15 +144,15 @@ msgstr "Repositorium"
 
 #: src/config.rs:983
 msgid "  failed to sync {}"
-msgstr " {} konnte nicht synchronisiert werden"
+msgstr " {} kann nicht synchronisiert werden"
 
 #: src/devel.rs:129 src/download.rs:179
 msgid "Querying AUR..."
-msgstr "AUR wird abgefragt…"
+msgstr "AUR abfragen…"
 
 #: src/devel.rs:142 src/devel.rs:166 src/install.rs:694
 msgid "failed to parse srcinfo for '{}'"
-msgstr "srcinfo für ‚{}‘ konnte nicht geparsed werden"
+msgstr "kann .SRCINFO für ‚{}‘ nicht parsen"
 
 #: src/devel.rs:184
 msgid "Looking for devel repos..."
@@ -160,7 +160,7 @@ msgstr "Suche nach devel Repos…"
 
 #: src/devel.rs:193
 msgid "failed to save devel info"
-msgstr "devel Informationen konnten nicht gespeichert werden"
+msgstr "kann devel Informationen nicht speichern"
 
 #: src/devel.rs:382
 msgid "package does not have an update"
@@ -168,7 +168,7 @@ msgstr "für das Paket gibt es kein Update"
 
 #: src/devel.rs:417
 msgid "failed to lookup: {}"
-msgstr "Fehler beim Nachschlagen: {}"
+msgstr "kann nicht finden: {}"
 
 #: src/devel.rs:445
 msgid "invalid json: {}"
@@ -184,15 +184,15 @@ msgstr "als veraltet markiert: "
 
 #: src/download.rs:105
 msgid "orphans: "
-msgstr "Waisen: "
+msgstr "verwaist: "
 
 #: src/download.rs:206
 msgid "could not get current directory"
-msgstr "momentanes Verzeichnis konnte nicht ermittelt werden"
+msgstr "kann momentanes Verzeichnis nicht feststellen"
 
 #: src/download.rs:210
 msgid "can not get repo packages: asp is not installed"
-msgstr "Repo-Pakete können nicht ermittelt werden: asp ist nicht installiert"
+msgstr "kann keine Repo-Pakete erhalten: asp ist nicht installiert"
 
 #: src/download.rs:231
 msgid "Missing ABS packages "
@@ -208,7 +208,7 @@ msgstr "Ausführung fehlgeschlagen:"
 
 #: src/download.rs:263
 msgid "does not contain PKGBUILD: skipping"
-msgstr "PKGBUILD nicht enthalten: Überspringe"
+msgstr "enthält kein PKGBUILD: Überspringe"
 
 #: src/download.rs:294
 msgid " ({total>padding$}/{total}) downloading: {pkg}"
@@ -216,7 +216,7 @@ msgstr " ({total>padding$}/{total}) Lädt herunter: {pkg}"
 
 #: src/download.rs:317
 msgid "Downloading PKGBUILDs..."
-msgstr "Lädt PKGBUILDs herunter…"
+msgstr "Lade PKGBUILDs herunter…"
 
 #: src/download.rs:321
 msgid " PKGBUILDs up to date"
@@ -224,7 +224,7 @@ msgstr " PKGBUILDs sind aktuell"
 
 #: src/download.rs:520
 msgid "{} is not installed: can not get repo packages"
-msgstr "{} ist nicht installiert: Repo-Pakete können nicht ermittelt werden"
+msgstr "{} ist nicht installiert: kann Repo-Pakete nicht erhalten"
 
 #: src/download.rs:561
 msgid "asp returned {}"
@@ -240,7 +240,7 @@ msgstr "Keine"
 
 #: src/info.rs:30 src/query.rs:51
 msgid "package '{}' was not found"
-msgstr "Paket ‚{}‘ konnte nicht gefunden werden"
+msgstr "kann Paket ‚{}‘ nicht finden"
 
 #: src/info.rs:57 src/info.rs:96
 msgid "Name"
@@ -336,11 +336,11 @@ msgstr "keine Architektur"
 
 #: src/install.rs:138
 msgid "can't build package as root"
-msgstr "Pakete können nicht als root gebaut werden"
+msgstr "kann Pakete nicht als root bauen"
 
 #: src/install.rs:142
 msgid "failed to parse srcinfo generated by makepkg"
-msgstr "von Makepkg generierte srcinfo konnte nicht geparsed werden"
+msgstr "kann von Makepkg generiertes .SRCINFO nicht parsen"
 
 #: src/install.rs:171 src/install.rs:442
 msgid "Resolving dependencies..."
@@ -348,7 +348,7 @@ msgstr "Löse Abhängigkeiten auf…"
 
 #: src/install.rs:220 src/install.rs:225
 msgid "failed to download sources"
-msgstr "Quelldateien konnten nicht heruntergeladen werden"
+msgstr "kann Quelldateien nicht herunterladen"
 
 #: src/install.rs:230 src/install.rs:246 src/install.rs:254
 msgid "failed to build"
@@ -356,7 +356,7 @@ msgstr "Build fehlgeschlagen"
 
 #: src/install.rs:233
 msgid "parsing pkg list..."
-msgstr "Pkg Liste wird geparsed…"
+msgstr "parse Pkg Liste…"
 
 #: src/install.rs:261 src/install.rs:1462
 msgid "{}-{} is up to date -- skipping build"
@@ -368,7 +368,7 @@ msgstr "Fehler:"
 
 #: src/install.rs:334
 msgid "could not get news"
-msgstr "Neuigkeiten konnten nicht abgerufen werden"
+msgstr "kann Neuigkeiten nicht abrufen"
 
 #: src/install.rs:339 src/install.rs:521 src/install.rs:716 src/install.rs:848
 msgid "Proceed with installation?"
@@ -385,7 +385,7 @@ msgstr " es gibt nichts zu tun"
 
 #: src/install.rs:488
 msgid "can't install AUR package as root"
-msgstr "AUR-Pakete können nicht als root installiert werden"
+msgstr "kann AUR-Pakete nicht als root installieren"
 
 #: src/install.rs:507
 msgid "Remove make dependencies after install?"
@@ -393,7 +393,7 @@ msgstr "Entferne make Abhängigkeiten nach der Installation?"
 
 #: src/install.rs:518
 msgid "Proceed to review?"
-msgstr "Mit der Überprüfung fortfahren?"
+msgstr "Weiter überprüfen?"
 
 #: src/install.rs:559
 msgid "The following packages are not compatible with your architecture:"
@@ -405,15 +405,15 @@ msgstr "Möchten Sie trotzdem versuchen, sie zu bauen?"
 
 #: src/install.rs:662
 msgid "packages failed to build: {}"
-msgstr "Pakete konnten nicht gebaut werden: {}"
+msgstr "kann Pakete nicht bauen: {}"
 
 #: src/install.rs:698
 msgid "could not find .SRINFO for '{}'"
-msgstr ".SRCINFO zu ‚{}‘ konnte nicht gefunden werden"
+msgstr "kann .SRCINFO zu ‚{}‘ nicht finden"
 
 #: src/install.rs:762
 msgid "failed to read dir: {}"
-msgstr "Verzeichnis konnte nicht gelesen werden: {}"
+msgstr "kann Verzeichnis nicht lesen: {}"
 
 #: src/install.rs:778
 msgid ""
@@ -437,7 +437,7 @@ msgstr " nichts Neues zu überprüfen"
 
 #: src/install.rs:871
 msgid "failed to execute file manager: {}"
-msgstr "Dateimanager konnte nicht ausgeführt werden: {}"
+msgstr "kann Dateimanager nicht ausführen: {}"
 
 #: src/install.rs:874
 msgid "file manager did not execute successfully"
@@ -449,7 +449,7 @@ msgstr "duplizierte Pakete: {}"
 
 #: src/install.rs:975
 msgid "could not find all required packages:"
-msgstr "es konnten nicht alle benötigten Pakete gefunden werden:"
+msgstr "kann nicht alle benötigten Pakete finden:"
 
 #: src/install.rs:982
 msgid ""
@@ -485,7 +485,7 @@ msgstr "In Konflikt stehende Pakete müssen manuell bestätigt werden"
 
 #: src/install.rs:1078
 msgid "can not install conflicting packages with --noconfirm"
-msgstr "in Konflikt stehende Pakete können nicht mit --noconfirm installiert werden"
+msgstr "kann in Konflikt stehende Pakete nicht mit --noconfirm installieren"
 
 #: src/install.rs:1117
 msgid "Repo"
@@ -509,11 +509,11 @@ msgstr "Signiere Pakete…"
 
 #: src/install.rs:1398 src/install.rs:1403
 msgid "failed to download sources for '{}'"
-msgstr "Quelldateien für ‚{}‘ konnten nicht heruntergeladen werden"
+msgstr "kann Quelldateien für ‚{}‘ nicht herunterladen"
 
 #: src/install.rs:1408 src/install.rs:1447 src/install.rs:1455
 msgid "failed to build '{}'"
-msgstr "‚{}‘ konnte nicht gebaut werden"
+msgstr "kann ‚{}‘ nicht bauen"
 
 #: src/install.rs:1411
 msgid "{}: parsing pkg list..."
@@ -525,15 +525,15 @@ msgstr "füge {} zur Installationsliste hinzu"
 
 #: src/install.rs:1532
 msgid "could not find package '{pkg}' in package list for '{base}'"
-msgstr "Paket ‚{pkg}‘ konnte nicht in der Paketliste für ‚{base}‘ gefunden werden"
+msgstr "kann Paket ‚{pkg}‘ nicht in der Paketliste für ‚{base}‘ finden"
 
 #: src/install.rs:1670
 msgid "can't find package name in packagelist: {}"
-msgstr "Paketname kann nicht in Paketliste gefunden werden: {}"
+msgstr "kann Paketname nicht in der Paketliste finden: {}"
 
 #: src/install.rs:1743
 msgid "There are {} members in group"
-msgstr "Es befinden sich {} Einträge in der Gruppe"
+msgstr "Die Gruppe enthält {} Einträge"
 
 #: src/install.rs:1768
 msgid ""
@@ -567,7 +567,7 @@ msgstr "Kein Titel"
 
 #: src/news.rs:69
 msgid "no new news"
-msgstr "keine neuen Neuigkeiten"
+msgstr "keine Neuigkeiten"
 
 #: src/query.rs:105
 msgid " [ignored]"
@@ -575,7 +575,7 @@ msgstr " [ignoriert]"
 
 #: src/repo.rs:164
 msgid "failed to get current exe"
-msgstr "aktuelle exe konnte nicht gefunden werden"
+msgstr "kann aktuelle exe nicht finden"
 
 #: src/repo.rs:195
 msgid "syncing local databases..."
@@ -643,11 +643,11 @@ msgstr " [installiert]"
 
 #: src/upgrade.rs:122
 msgid "Looking for AUR upgrades"
-msgstr "AUR-Upgrades werden gesucht"
+msgstr "Suche AUR-Upgrades"
 
 #: src/upgrade.rs:148
 msgid "Looking for devel upgrades"
-msgstr "devel-Upgrades werden gesucht"
+msgstr "Suche devel-Upgrades"
 
 #: src/upgrade.rs:179
 msgid "warning:"
@@ -699,7 +699,7 @@ msgstr "ungültige Zahl: {n} ist nicht zwischen 1 und {max}"
 
 #: src/lib.rs:153
 msgid "can not use chroot builds: devtools is not installed"
-msgstr "chroot Builds können nicht verwendet werden: devtools sind nicht installiert"
+msgstr "kann chroot Builds nicht verwenden: devtools sind nicht installiert"
 
 #: src/lib.rs:393
 msgid " [installed: {}]"
