--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: paru VERSION\n"
 "Report-Msgid-Bugs-To: https://github.com/Morganamilo/paru\n"
 "POT-Creation-Date: 2021-07-18 00:52+0000\n"
-"PO-Revision-Date: 2021-08-09 20:45-0300\n"
+"PO-Revision-Date: 2021-08-10 08:09-0300\n"
 "Last-Translator: João Vitor S. Anjos\n"
 "Language-Team: \n"
 "Language: pt_BR\n"
@@ -1033,7 +1033,7 @@ msgstr "{pkg}: ignorando atualização de pacote ({old} => {new})"
 
 #: src/upgrade.rs:334
 msgid "Packages to exclude (eg: 1 2 3, 1-3):"
-msgstr "Pacotes a serem excluídos (ex: 1 2 3, 1-3):"
+msgstr "Pacotes a serem ignorados (ex: 1 2 3, 1-3):"
 
 #: src/util.rs:80
 msgid "[Y/n]:"
