--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -10,14 +10,14 @@ msgstr ""
 "Project-Id-Version: paru VERSION\n"
 "Report-Msgid-Bugs-To: https://github.com/Morganamilo/paru\n"
 "POT-Creation-Date: 2021-07-18 00:52+0000\n"
-"PO-Revision-Date: 2021-07-24 12:37-0300\n"
+"PO-Revision-Date: 2021-08-10 08:09-0300\n"
 "Last-Translator: João Vitor S. Anjos\n"
 "Language-Team: \n"
 "Language: pt_BR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 3.0\n"
+"X-Generator: Poedit 2.4.3\n"
 "X-Poedit-Bookmarks: -1,110,-1,-1,-1,-1,-1,-1,-1,-1\n"
 
 #: src/clean.rs:31
@@ -192,7 +192,7 @@ msgstr "pacotes ausentes no AUR: "
 
 #: src/download.rs:94
 msgid "marked out of date: "
-msgstr "desatualizados: "
+msgstr "marcado como desatualizado: "
 
 #: src/download.rs:105
 msgid "orphans: "
@@ -766,7 +766,7 @@ msgstr "Remover dependências de compilação depois da instalação?"
 
 #: src/install.rs:526
 msgid "Proceed to review?"
-msgstr "Continuar para análise?"
+msgstr "Continuar para revisão?"
 
 #: src/install.rs:575
 msgid "The following packages are not compatible with your architecture:"
@@ -806,7 +806,7 @@ msgstr "arquivo binário: {}"
 
 #: src/install.rs:868
 msgid " nothing new to review"
-msgstr " nada de novo para analisar"
+msgstr " nada de novo para revisar"
 
 #: src/install.rs:887
 msgid "failed to execute file manager: {}"
@@ -981,7 +981,7 @@ msgstr "[Órfão]"
 
 #: src/search.rs:263
 msgid "no packages match search"
-msgstr "nenhum resultado"
+msgstr "nenhum pacote corresponde à pesquisa"
 
 #: src/search.rs:321
 msgid "Packages to install (eg: 1 2 3, 1-3):"
@@ -989,7 +989,7 @@ msgstr "Pacotes a instalar (ex: 1 2 3, 1-3):"
 
 #: src/stats.rs:83
 msgid "Total installed packages: {}"
-msgstr "Pacotes instalados: {}"
+msgstr "Total de pacotes instalados: {}"
 
 #: src/stats.rs:87
 msgid "Aur packages: {}"
@@ -1021,7 +1021,7 @@ msgstr "Procurando por atualizações no AUR"
 
 #: src/upgrade.rs:148
 msgid "Looking for devel upgrades"
-msgstr "Procurando por atualizações de pacotes git"
+msgstr "Procurando por atualizações de pacotes devel"
 
 #: src/upgrade.rs:179
 msgid "warning:"
@@ -1033,7 +1033,7 @@ msgstr "{pkg}: ignorando atualização de pacote ({old} => {new})"
 
 #: src/upgrade.rs:334
 msgid "Packages to exclude (eg: 1 2 3, 1-3):"
-msgstr "Ignorar pacotes (ex: 1 2 3, 1-3):"
+msgstr "Pacotes a serem ignorados (ex: 1 2 3, 1-3):"
 
 #: src/util.rs:80
 msgid "[Y/n]:"
