--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -206,8 +206,8 @@ msgid "does not contain PKGBUILD: skipping"
 msgstr "不包含 PKGBUILD：略過"
 
 #: src/download.rs:294
-msgid " ({total>padding$}/{total}) downloading: {pkg}"
-msgstr " ({total>padding$}/{total}) 正在下載：{pkg}"
+msgid "downloading: {pkg}"
+msgstr "正在下載：{pkg}"
 
 #: src/download.rs:317
 msgid "Downloading PKGBUILDs..."
