--- a/man/paru.conf.5
+++ b/man/paru.conf.5
@@ -115,6 +115,10 @@ a conflict, causing a package to be removed without the user's confirmation.
 However, this is very unlikely.
 
 .TP
+.B SaveChanges
+Commit changes to pkgbuilds made during review.
+
+.TP
 .B Redownload [= all]
 Always download PKGBUILDs of targets even when a copy is available in cache. If
 set to all then this applies to all packages, not only targets.
