Add -x/--regex for -Ss
Allows search the aur using regex

paru -Ssx ^p.ru

--- a/man/paru.8
+++ b/man/paru.8
@@ -68,6 +68,12 @@ built packages but will keep already downloaded VCS sources.
 cleaning it.
 
 .TP
+.B \-Ss
+The AUR can be searched using regex but it must be explicitly requested using
+\-x/\-\-regex. Regex search will only search package names and not descriptions
+regardless of SearchBy.
+
+.TP
 .B \-Sss
 Paru will also output a verbose search result when passing two
 '--search' or '-s' flags.
