Add search size limit

--- a/man/paru.8
+++ b/man/paru.8
@@ -328,6 +328,11 @@ is the default.
 Print search results from bottom to top. AUR packages will print first.
 
 .TP
+.B \-\-limit <limit>
+Limit the number of packages returned in a search to the given amount. Defaults
+to 0 (no limit). This applies separately to repo and AUR packages.
+
+.TP
 .B \-\-nocheck
 Don't resolve checkdepends or run the check function.
 
