--- a/man/paru.conf.5
+++ b/man/paru.conf.5
@@ -167,6 +167,11 @@ Defaults to name-desc. Search AUR packages according to the options in
 "Search by" visible here: https://aur.archlinux.org/packages/
 
 .TP
+.B Limit = N
+Limit the number of packages returned in a search to the given amount. Defaults
+to 0 (no limit). This applies separately to repo and AUR packages.
+
+.TP
 .B CompletionInterval = N
 Time in days to refresh the completion cache. Setting this to 0 will cause the
 cache to be refreshed every time, while setting this to -1 will cause the cache
